kubernetes/minikube/yt_news-deployment.yaml
# Create a new namespace for the youtube_news app.
apiVersion: v1
kind: Namespace
metadata:
  name: yt-news # Change this value if you want a different namespace name
  labels:
    name: yt-news # Change this value to match metadata.name
---
## create deployment for yt_news
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtube-news-deployment
  namespace: yt-news
spec:
  replicas: 1 # specify the number of Pods you want
  selector:
    matchLabels:
      app: youtube-news
  template:
    metadata:
      labels:
        app: youtube-news
    spec:
      containers:
      - name: youtube-news
        image: youtube_news_minikube:main
        resources:
          limits:
            memory: "6Gi"
            cpu: "6000m"
            nvidia.com/gpu: "1"
        ###### Select one of the entrypoints
        ## run one of the entrypoints of youtuve_news app
        args: ['streamlit', 'run', 'main.py', '--server.port', '8501']
        ports:
        - containerPort: 8501
        ## or uncomment the following lines to run the container in interactive mode
        # stdin: true
        # stdinOnce: true
        # tty: true
        # workingDir: '/'
        #######
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: nfs
          mountPath: /data
        - name: config-volume
          mountPath: /etc/config
      nodeSelector:
        kubernetes.io/hostname: minikube
      volumes:
      - name: config-volume
        configMap:
          name: yt-news-config-json
      - name: nfs
        persistentVolumeClaim:
          claimName: nfs
      # - name: localvolume
      #   hostPath:
      #     path: /volumes/youtube-news/data
      #     type: DirectoryOrCreate
---
# create service for yt_news
# kubectl create service clusterip yt-news --tcp=8501:8501 --dry-run=client -o yaml > yt_news-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youtube-news
  namespace: yt-news
spec:
  ports:
  - name: streamlit-port
    port: 5000
    protocol: TCP
    targetPort: 8501
  selector:
    app: youtube-news
---
# Create ingress for the streamlit service
# kubectl create ingress yt-news-ingress --class=nginx --rule=yt-news.minikube.local/*=yt-news:8501 --dry-run=client -o yaml > yt_news-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yt-news-ingress
  namespace: yt-news
spec:
  ingressClassName: nginx
  rules:
  - host: yt-news.minikube.local
    http:
      paths:
      - backend:
          service:
            name: youtube-news
            port:
              number: 5000
        path: /
        pathType: Prefix
